# Automation-1.1

./: README.md  pyproject.toml
src/ettin_entertainment_daggerheart_social_media_manager/: crew.py  main.py
src/ettin_entertainment_daggerheart_social_media_manager/config/: agents.yaml  tasks.yaml
