[project]
name = "ettin_entertainment_daggerheart_social_media_manager"
version = "0.1.0"
description = "ettin_entertainment_daggerheart_social_media_manager using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.3.0"
]

[project.scripts]
ettin_entertainment_daggerheart_social_media_manager = "ettin_entertainment_daggerheart_social_media_manager.main:run"
run_crew = "ettin_entertainment_daggerheart_social_media_manager.main:run"
train = "ettin_entertainment_daggerheart_social_media_manager.main:train"
replay = "ettin_entertainment_daggerheart_social_media_manager.main:replay"
test = "ettin_entertainment_daggerheart_social_media_manager.main:test"
run_with_trigger = "ettin_entertainment_daggerheart_social_media_manager.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
